feature:swagger sanctum authenticate option added
